--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,19 +8,18 @@ services:
      - "5001:5001"
     depends_on:
       - redis
+    volumes: ['./api:/api']
   app:
     build:
       context: ./frontend
       dockerfile: Dockerfile
     links:
       - "web"
-      - "worker"
     depends_on:
       - web
-      - worker
     ports:
      - "8051:8051"
-  # volumes: ['./api:/api']
+    volumes: ['./app:/app']
   worker:
     build:
       context: ./celery-queue
@@ -31,22 +30,23 @@ services:
       CELERY_RESULT_BACKEND: redis://redis
     depends_on:
       - redis
-  #   volumes: ['./celery-queue:/queue']
+    volumes: ['./celery-queue:/queue']
   monitor:
-    build:
-      context: ./celery-queue
-      dockerfile: Dockerfile
-    ports:
-     - "5555:5555"
-    command:  celery -A 'tasks' flower --loglevel=info
+    image: mher/flower
     environment:
-      CELERY_BROKER_URL: redis://redis:6379/0
-      CELERY_RESULT_BACKEND: redis://redis:6379/0
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - FLOWER_PORT=5555
+    ports:
+      - 5555:5555
     depends_on:
       - redis
       - worker
-  #   volumes: ['./celery-queue:/queue']
+    volumes: ['./celery-queue:/queue']
   redis:
     image: redis:alpine
     ports:
       - "6379:6379"
+  # redisinsight:
+  #   image: 'redislabs/redisinsight:latest'
+  #   ports:
+  #     - '8001:8001'
